Compositor broken (Backdrop & Preview) #35553

Closed
opened 2013-05-28 22:56:24 +02:00 by Thomas Dinges · 9 comments

%%%--- Operating System, Graphics card ---
Windows 7 x64, Geforce 540, SVN 57096
MSVC2008 + Scons

Since a few revisions, the backdrop + compositor nodes preview is not working anymore, it just does not display.

I could isolate it to the revisions 57075 and 57080.
75 still works, 80 fails already.

Bug confimed on vitos and Fweeb on IRC.

%%%

%%%--- Operating System, Graphics card --- Windows 7 x64, Geforce 540, SVN 57096 MSVC2008 + Scons Since a few revisions, the backdrop + compositor nodes preview is not working anymore, it just does not display. I could isolate it to the revisions 57075 and 57080. 75 still works, 80 fails already. Bug confimed on vitos and Fweeb on IRC. %%%
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

%%%Confirmed by vitos and Fweeb I mean^^ :) %%%

%%%Confirmed by vitos and Fweeb I mean^^ :) %%%
Author
Owner

%%%Attached compositor_failure.jpg to show the problem. %%%

%%%Attached compositor_failure.jpg to show the problem. %%%

%%%Confirmed, backdrop only works through viewer node. Plus that doesn't update without a refresh to the alpha.%%%

%%%Confirmed, backdrop only works through viewer node. Plus that doesn't update without a refresh to the alpha.%%%

%%%@Joe Harford, backdrop only ever works through the viewer node as far as I can tell. (checked 2.66a and current svn 57098. - cant get it to break) %%%

%%%@Joe Harford, backdrop only ever works through the viewer node as far as I can tell. (checked 2.66a and current svn 57098. - cant get it to break) %%%
Author
Owner

%%%I have one more clue, in latest SVN I see a lot of Compositor print to the console.

That is printBackgroundStats()

	if (G.background)
		printBackgroundStats();

in compositor\intern\COM_ExecutionGroup.cpp%%%

%%%I have one more clue, in latest SVN I see a lot of Compositor print to the console. That is printBackgroundStats() if (G.background) printBackgroundStats(); in compositor\intern\COM_ExecutionGroup.cpp%%%
Author
Owner

%%%So it's definitely caused by code cleanup commit 57076. %%%

%%%So it's definitely caused by code cleanup commit 57076. %%%

%%%Fixed in svn rev57102/ Thanks for the report, closing.%%%

%%%Fixed in svn rev57102/ Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35553
No description provided.