source/blender/modifiers/intern/MOD_bevel.c
@@ -110,7 +110,7 @@ static DerivedMesh *applyModifier(ModifierData *md, struct Object *ob,
 	MDeformVert *dvert = NULL;
 	BevelModifierData *bmd = (BevelModifierData *) md;
 	const float threshold = cosf((bmd->bevel_angle + 0.00001f) * (float)M_PI / 180.0f);
-	const bool vertex_only = bmd->flags & BME_BEVEL_VERT;
+	const bool vertex_only = (bmd->flags & BME_BEVEL_VERT) != 0;
 	const bool do_clamp = !(bmd->flags & BME_BEVEL_OVERLAP_OK);
 
 	bm = DM_to_bmesh(dm);
